--- a/checkin.html
+++ b/checkin.html
@@ -13,48 +13,66 @@
 
     <link rel="stylesheet" href="minstil.css">
 </head>
-<div id="flexbox">
-
-    <body>
-        <header id="menu">
-            <nav>
-                <input type="checkbox" id="toggle" class="hidden">
-                <ul id="main-nav">
-                    <li><a href="index.html">
-                            <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
-                            SPØRGSMÅL</a></li><br>
-                    <li><a href="bagmed.html">
-                            <img src="images/facilitet.png" alt="faciliteter"><br>
-                            FACILITETER</a></li><br>
-                    <li><a href="omprodukt.html">
-                            <img src="images/restaurant.png" alt="restaurant"><br>
-                            RESTAURANT</a></li><br>
-                    <li><a href="bagom.html">
-                            <img src="images/check.png" alt="check-in"><br>
-                            CHECK-IN</a></li>
-                    <li><a href="bagom.html">
-                            <img src="images/moede.png" alt="moede"><br>
-                            MØDELOKALE</a></li>
-                    <li><a href="bagom.html">
-                            <img src="images/kort.png" alt="kort"><br>
-                            KORT</a></li>
-                </ul>
-            </nav>
-        </header>
 
 
+<body id="flexbox">
+    <header id="menu">
+        <nav>
+            <input type="checkbox" id="toggle" class="hidden">
+            <ul id="main-nav">
+                <li><a href="index.html">
+                        <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
+                        SPØRGSMÅL</a></li><br>
+                <li><a href="bagmed.html">
+                        <img src="images/facilitet.png" alt="faciliteter"><br>
+                        FACILITETER</a></li><br>
+                <li><a href="omprodukt.html">
+                        <img src="images/restaurant.png" alt="restaurant"><br>
+                        RESTAURANT</a></li><br>
+                <li><a href="bagom.html">
+                        <img src="images/check.png" alt="check-in"><br>
+                        CHECK-IN</a></li>
+                <li><a href="bagom.html">
+                        <img src="images/moede.png" alt="moede"><br>
+                        MØDELOKALE</a></li>
+                <li><a href="bagom.html">
+                        <img src="images/kort.png" alt="kort"><br>
+                        KORT</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-<section id="indhold">    
-
-<h1>Check In</h1>
 
 
-</section>
-        
+    <main id="checkin">
 
-    </body>
-</div>
+        <h1>Check-In</h1>
+        <div id="check-grid">
+            <div id="checkin_info">
+                <div class="checkinfelt">
+                    <label for="navn" class="etiket">Navn:</label>
+                    <input type="text" class="indtastningsfelt" id="navn">
+                </div>
+                <div class="checkinfelt">
+                    <label for="pas_nr" class="etiket">Pas.nr.:</label>
+                    <input type="text" class="indtastningsfelt" id="pas_nr">
+                </div>
+                <div class="checkinfelt">
+                    <label for="adresse" class="etiket">Adresse:</label>
+                    <input type="text" class="indtastningsfelt" id="adresse">
+                </div>
+                <div class="checkinfelt">
+                    <label for="booking_nr" class="etiket">Bookingnummer:</label>
+                    <input type="text" class="indtastningsfelt" id="booking_nr">
+                </div>
+            </div>
+            <div id="keyboard"></div>
+        </div>
+    </main>
+
+</body>
+
 
 
 </html>
