--- a/faciliteter.html
+++ b/faciliteter.html
@@ -23,9 +23,11 @@
                     <li><a href="index.html">
                             <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
                             SPØRGSMÅL</a></li><br>
-                    <li><a href="bagmed.html">
+                            
+                    <li><a href="faciliteter.html">
                             <img src="images/facilitet.png" alt="faciliteter"><br>
                             FACILITETER</a></li><br>
+                            
                     <li><a href="omprodukt.html">
                             <img src="images/restaurant.png" alt="restaurant"><br>
                             RESTAURANT</a></li><br>
