--- a/faciliteter.html
+++ b/faciliteter.html
@@ -31,7 +31,7 @@
                     <li><a href="omprodukt.html">
                             <img src="images/restaurant.png" alt="restaurant"><br>
                             RESTAURANT</a></li><br>
-                    <li><a href="bagom.html">
+                    <li><a href="checkin.html">
                             <img src="images/check.png" alt="check-in"><br>
                             CHECK-IN</a></li>
                     <li><a href="bagom.html">
