--- a/checkin.html
+++ b/checkin.html
@@ -16,31 +16,31 @@
 
 
 <body id="flexbox">
-    <header id="menu">
-        <nav>
-            <input type="checkbox" id="toggle" class="hidden">
-            <ul id="main-nav">
-                <li><a href="index.html">
-                        <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
-                        SPØRGSMÅL</a></li><br>
-                <li><a href="bagmed.html">
-                        <img src="images/facilitet.png" alt="faciliteter"><br>
-                        FACILITETER</a></li><br>
-                <li><a href="omprodukt.html">
-                        <img src="images/restaurant.png" alt="restaurant"><br>
-                        RESTAURANT</a></li><br>
-                <li><a href="bagom.html">
-                        <img src="images/check.png" alt="check-in"><br>
-                        CHECK-IN</a></li>
-                <li><a href="bagom.html">
-                        <img src="images/moede.png" alt="moede"><br>
-                        MØDELOKALE</a></li>
-                <li><a href="bagom.html">
-                        <img src="images/kort.png" alt="kort"><br>
-                        KORT</a></li>
-            </ul>
-        </nav>
-    </header>
+      <header id="menu">
+            <nav>
+                <input type="checkbox" id="toggle" class="hidden">
+                <ul id="main-nav">
+                    <li><a href="index.html">
+                            <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
+                            SPØRGSMÅL</a></li><br>
+                    <li><a href="faciliteter.html">
+                            <img src="images/facilitet.png" alt="faciliteter"><br>
+                            FACILITETER</a></li><br>
+                    <li><a href="restaurant.html">
+                            <img src="images/restaurant.png" alt="restaurant"><br>
+                            RESTAURANT</a></li><br>
+                    <li><a href="checkin.html">
+                            <img src="images/check.png" alt="check-in"><br>
+                            CHECK-IN</a></li>
+                    <li><a href="moedelokale.html">
+                            <img src="images/moede.png" alt="moede"><br>
+                            MØDELOKALE</a></li>
+                    <li><a href="kort.html">
+                            <img src="images/kort.png" alt="kort"><br>
+                            KORT</a></li>
+                </ul>
+            </nav>
+        </header>
 
 
 
@@ -67,12 +67,13 @@
                     <input type="text" class="indtastningsfelt" id="booking_nr">
                 </div>
             </div>
-            <div id="keyboard"></div>
         </div>
     </main>
+    
+    
 
 </body>
 
-
+<script src="mitjs.js"></script>
 
 </html>
