--- a/faciliteter.html
+++ b/faciliteter.html
@@ -12,32 +12,31 @@
     <meta name="description" content="Here you add the description of your content">
 
     <link rel="stylesheet" href="minstil.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700" rel="stylesheet">
 </head>
 <div id="flexbox">
 
     <body>
-        <header id="menu">
+          <header id="menu">
             <nav>
                 <input type="checkbox" id="toggle" class="hidden">
                 <ul id="main-nav">
                     <li><a href="index.html">
                             <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
                             SPØRGSMÅL</a></li><br>
-                            
                     <li><a href="faciliteter.html">
                             <img src="images/facilitet.png" alt="faciliteter"><br>
                             FACILITETER</a></li><br>
-                            
-                    <li><a href="omprodukt.html">
+                    <li><a href="restaurant.html">
                             <img src="images/restaurant.png" alt="restaurant"><br>
                             RESTAURANT</a></li><br>
                     <li><a href="checkin.html">
                             <img src="images/check.png" alt="check-in"><br>
                             CHECK-IN</a></li>
-                    <li><a href="bagom.html">
+                    <li><a href="moedelokale.html">
                             <img src="images/moede.png" alt="moede"><br>
                             MØDELOKALE</a></li>
-                    <li><a href="bagom.html">
+                    <li><a href="kort.html">
                             <img src="images/kort.png" alt="kort"><br>
                             KORT</a></li>
                 </ul>
