--- a/forside.html
+++ b/forside.html
@@ -26,16 +26,16 @@
                     <li><a href="faciliteter.html">
                             <img src="images/facilitet.png" alt="faciliteter"><br>
                             FACILITETER</a></li><br>
-                    <li><a href="omprodukt.html">
+                    <li><a href="restaurant.html">
                             <img src="images/restaurant.png" alt="restaurant"><br>
                             RESTAURANT</a></li><br>
-                    <li><a href="bagom.html">
+                    <li><a href="checkin.html">
                             <img src="images/check.png" alt="check-in"><br>
                             CHECK-IN</a></li>
-                    <li><a href="bagom.html">
+                    <li><a href="moedelokale.html">
                             <img src="images/moede.png" alt="moede"><br>
                             MØDELOKALE</a></li>
-                    <li><a href="bagom.html">
+                    <li><a href="kort.html">
                             <img src="images/kort.png" alt="kort"><br>
                             KORT</a></li>
                 </ul>
