--- a/checkin.html
+++ b/checkin.html
@@ -12,6 +12,8 @@
     <meta name="description" content="Here you add the description of your content">
 
     <link rel="stylesheet" href="minstil.css">
+    <link rel="keyboardstylesheet" href="keyboardstil.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 
@@ -52,19 +54,23 @@
             <div id="checkin_info">
                 <div class="checkinfelt">
                     <label for="navn" class="etiket">Navn:</label>
-                    <input type="text" class="indtastningsfelt" id="navn">
+                    <input type="text" class="keyboard" id="navn">
+                    <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
                 </div>
                 <div class="checkinfelt">
                     <label for="pas_nr" class="etiket">Pas.nr.:</label>
-                    <input type="text" class="indtastningsfelt" id="pas_nr">
+                    <input type="text" class="keyboard" id="pas_nr">
+                    <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
                 </div>
                 <div class="checkinfelt">
                     <label for="adresse" class="etiket">Adresse:</label>
-                    <input type="text" class="indtastningsfelt" id="adresse">
+                    <input type="text" class="keyboard" id="adresse">
+                    <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
                 </div>
                 <div class="checkinfelt">
                     <label for="booking_nr" class="etiket">Bookingnummer:</label>
-                    <input type="text" class="indtastningsfelt" id="booking_nr">
+                    <input type="text" class="keyboard" id="booking_nr">
+                    <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
                 </div>
             </div>
         </div>
@@ -75,5 +81,6 @@
 </body>
 
 <script src="mitjs.js"></script>
+<script src="jskeyboard.js"></script>
 
 </html>
