--- a/faciliteter.html
+++ b/faciliteter.html
@@ -100,10 +100,9 @@
                <div class="bgfacilitet4">
                    <div id="galleri">
                    <div class="tekstbox" id="vbar">
-                    <h3 class="facilitettekst">V - BAR</h3>
+                    <h3 class="facilitettekst">Room Service</h3>
                     <p class="facilitettekst_p">
-                    På Comwell byder vi på en af Aarhus' førende ginbarer.<br>
-                    Derudover byder vi også på et let spisekort med gode og klassiske retter. 
+                    Vi tilbyder roomservice hele døgnet rundt på Comwell. Vores Roomservie byder på enkelte og klassiske retter med fokus på smagen. Menuen ændre sig fra...  
                     </p>
                     <p class="button"><a href="">LÆS MERE</a>
                     </p>
