--- a/faciliteter.html
+++ b/faciliteter.html
@@ -51,7 +51,7 @@
             <h1 class="facilitettekst">FACILITETER</h1>
                
                 <div class="bgfacilitet1">
-                   <div id="galleri">
+                   <div class="galleri">
                    <div class="tekstbox">
                    
                     <h3 class="facilitettekst">YOGAWEEKEND</h3>
