--- a/faciliteter.html
+++ b/faciliteter.html
@@ -20,7 +20,7 @@
             <nav>
                 <input type="checkbox" id="toggle" class="hidden">
                 <ul id="main-nav">
-                    <li><a href="index.html">
+                    <li><a href="spoergsmaal.html">
                             <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
                             SPØRGSMÅL</a></li><br>
                     <li><a href="faciliteter.html">
