--- a/checkin.html
+++ b/checkin.html
@@ -49,7 +49,7 @@
 
     <main id="checkin">
 
-        <h1>Check-In</h1>
+        <h1 id="check-overskrift">Check-In</h1>
         <div id="check-grid">
             <div id="checkin_info">
                 <div class="checkinfelt">
@@ -72,7 +72,10 @@
                     <input type="text" class="keyboard" id="booking_nr">
                     <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
                 </div>
+                <p id="submit"><a href="">SUBMIT</a>
+                    </p>
             </div>
+            <img id="keyboard" src="images/keyboard.png"/>
         </div>
     </main>
     
