--- a/checkin.html
+++ b/checkin.html
@@ -12,37 +12,36 @@
     <meta name="description" content="Here you add the description of your content">
 
     <link rel="stylesheet" href="minstil.css">
-    <link rel="keyboardstylesheet" href="keyboardstil.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/css/index.css">
 </head>
 
 
 <body id="flexbox">
-      <header id="menu">
-            <nav>
-                <input type="checkbox" id="toggle" class="hidden">
-                <ul id="main-nav">
-                    <li><a href="index.html">
-                            <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
-                            SPØRGSMÅL</a></li><br>
-                    <li><a href="faciliteter.html">
-                            <img src="images/facilitet.png" alt="faciliteter"><br>
-                            FACILITETER</a></li><br>
-                    <li><a href="restaurant.html">
-                            <img src="images/restaurant.png" alt="restaurant"><br>
-                            RESTAURANT</a></li><br>
-                    <li><a href="checkin.html">
-                            <img src="images/check.png" alt="check-in"><br>
-                            CHECK-IN</a></li>
-                    <li><a href="moedelokale.html">
-                            <img src="images/moede.png" alt="moede"><br>
-                            MØDELOKALE</a></li>
-                    <li><a href="kort.html">
-                            <img src="images/kort.png" alt="kort"><br>
-                            KORT</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header id="menu">
+        <nav>
+            <input type="checkbox" id="toggle" class="hidden">
+            <ul id="main-nav">
+                <li><a href="index.html">
+                        <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
+                        SPØRGSMÅL</a></li><br>
+                <li><a href="faciliteter.html">
+                        <img src="images/facilitet.png" alt="faciliteter"><br>
+                        FACILITETER</a></li><br>
+                <li><a href="restaurant.html">
+                        <img src="images/restaurant.png" alt="restaurant"><br>
+                        RESTAURANT</a></li><br>
+                <li><a href="checkin.html">
+                        <img src="images/check.png" alt="check-in"><br>
+                        CHECK-IN</a></li>
+                <li><a href="moedelokale.html">
+                        <img src="images/moede.png" alt="moede"><br>
+                        MØDELOKALE</a></li>
+                <li><a href="kort.html">
+                        <img src="images/kort.png" alt="kort"><br>
+                        KORT</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
 
@@ -69,21 +68,23 @@
                 </div>
                 <div class="checkinfelt">
                     <label for="booking_nr" class="etiket">Bookingnummer:</label>
-                    <input type="text" class="keyboard" id="booking_nr">
+                    <input class="input" id="inputfelt1" placeholder="Tap on the virtual keyboard to start" />
+                    <div class="simple-keyboard"></div>
                     <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
                 </div>
                 <p id="submit"><a href="">SUBMIT</a>
-                    </p>
+                </p>
             </div>
-            <img id="keyboard" src="images/keyboard.png"/>
+            <img id="keyboard" src="images/keyboard.png" />
         </div>
     </main>
-    
-    
+ 
 
 </body>
 
 <script src="mitjs.js"></script>
 <script src="jskeyboard.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.min.js"></script>
 
 </html>
+<!--<input type="text" class="keyboard" id="booking_nr">-->
