--- a/moedelokale.html
+++ b/moedelokale.html
@@ -21,17 +21,20 @@
                 <input type="checkbox" id="toggle" class="hidden">
                 <ul id="main-nav">
                     <li><a href="index.html">
+                            <img src="images/comwellicon.png" alt="sprog"><br>
+                            </a></li><br>
+                    <li><a href="checkin.html">
+                            <img src="images/check.png" alt="check-in"><br>
+                            CHECK-IN</a></li>
+                    <li><a href="index.html">
                             <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
-                            SPØRGSMÅL</a></li><br>
+                            FAQ</a></li><br>
                     <li><a href="faciliteter.html">
                             <img src="images/facilitet.png" alt="faciliteter"><br>
                             FACILITETER</a></li><br>
                     <li><a href="restaurant.html">
                             <img src="images/restaurant.png" alt="restaurant"><br>
                             RESTAURANT</a></li><br>
-                    <li><a href="checkin.html">
-                            <img src="images/check.png" alt="check-in"><br>
-                            CHECK-IN</a></li>
                     <li><a href="moedelokale.html">
                             <img src="images/moede.png" alt="moede"><br>
                             MØDELOKALE</a></li>
