--- a/restaurant.html
+++ b/restaurant.html
@@ -19,6 +19,9 @@
             <nav>
                 <input type="checkbox" id="toggle" class="hidden">
                 <ul id="main-nav">
+                   <li><a href="index.html">
+                            <img src="images/comwellicon.png" alt="sprog"><br>
+                            </a></li><br>
                     <li><a href="spoergsmaal.html">
                             <img src="images/spoergsmaal.png" alt="spoergsmål"><br>
                             SPØRGSMÅL</a></li><br>
