--- a/checkin.html
+++ b/checkin.html
@@ -70,7 +70,7 @@
                     <label for="booking_nr" class="etiket">Bookingnummer:</label>
                     <input class="input" id="inputfelt1" placeholder="Tap on the virtual keyboard to start" />
                     <div class="simple-keyboard"></div>
-                    <img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />
+                    <!--<img class="icon" src="http://mottie.github.com/Keyboard/docs/css/images/keyboard.png" />-->
                 </div>
                 <p id="submit"><a href="">SUBMIT</a>
                 </p>
@@ -82,7 +82,6 @@
 
 </body>
 
-<script src="mitjs.js"></script>
 <script src="jskeyboard.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.min.js"></script>
 
