--- a/restaurant.html
+++ b/restaurant.html
@@ -37,9 +37,9 @@
                     <li><a href="moedelokale.html">
                             <img src="images/moede.png" alt="moede"><br>
                             MØDELOKALE</a></li>
-                    <li><a href="kort.html">
-                            <img src="images/kort.png" alt="kort"><br>
-                            KORT</a></li>
+                    <li><a href="vejr.html">
+                            <img src="images/weather-icon.png" alt="vejr"><br>
+                            VEJR</a></li>
                 </ul>
             </nav>
         </header>
